--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,15 @@
   </head>
 
   <body>
+    <%= render 'layouts/background' %>
+    <h1>
+    <% flash.each do |name,msg| %>
+    <ul>
+      <li><%= msg %></li>
+    </ul>
+    <% end %>
+    </h1>
     <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
