--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'background' %>
+<%= render 'layouts/background' %>
 <h1>Welcome to User Page</h1>
 <% @users.each do |user|%>
 <h1><%= user.name %></h1>
