--- a/app/views/layouts/_background.html.erb
+++ b/app/views/layouts/_background.html.erb
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>About Us</title>
-	<style type="text/css">
-		body {
-			background-image: url(/assets/background.png);
-			background-size: cover;
-		}
-	</style>
-</head>
-<body>
-</body>
-</html>
+<style type="text/css">
+	body {
+		background-image: asset-url("background2.png");
+		background-size: cover;
+	}
+</style>
