--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>About Us</title>
-	<style type="text/css">
-		body {
-			background-image: url(/assets/background.png);
-			background-size: cover;
-		}
-	</style>
-</head>
-<body>
+<div class="center jumbotron">
 	<h1>About Happy-Home</h1>
-</body>
-</html>
+</div>
