--- a/app/views/houses/edit.html.erb
+++ b/app/views/houses/edit.html.erb
@@ -1,3 +1,3 @@
-<h1> Edit your details </h1>
+<h1 class="center"> Edit your details </h1>
 <%= render 'form' %>
 <%= link_to "Delete this article", house_path(@house), method: :delete, data: {confirm:"Are you sure you want delete your house from Happy home?"} %>
