--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
 		</small>
 		<nav>
 			<ul>
-				<li>Connect us socially : <a href="#">&facebook;</a></li>
+				<li>Connect with us socially : <a href="#">&facebook;</a></li>
 			</ul>
 		</nav>
 	</footer>
