--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,17 +1,36 @@
 <%= render 'errors' %>
-<%= form_for @user do |user| %>
-	<p>
-		<%= user.label :name %> : <%= user.text_field :name %>
-	</p>
-	<p>
-		<%= user.label :mail %>	: <%= user.email_field :mail %>		
-	<p>
-		<%= user.label :contact %> : <%= user.telephone_field :contact %>
-	</p>
-	<p>
-		<%= user.label :user_type %> : <%= user.select :user_type, ['Admin', 'Land lord', 'Tenant'] %>
-	</p>
-	<p>
-		<%= user.submit %>
-	</p>
-<% end %>
+<div class="row">
+	<div class="col-xs-12">
+		<%= form_for @user do |user| %>
+		<div class="col-sm-4">
+		</div>
+			<div class="col-sm-4">
+				<div class="form-group">
+					<%= user.text_field :name, class: "form-control", placeholder: "Enter your full name", autofocus: true %>
+				</div>
+				<div class="form-group">
+					<%= user.email_field :mail, class: "form-control", placeholder: "Enter your mail" %>		
+				</div>
+				<div class="form-group">
+		            <%= user.telephone_field :contact, class: "form-control", placeholder: "Enter your contact number" %>
+		        </div>
+		        <div class="form-group">
+		            <div class="control-label">
+		            	<%= user.label :user_type %> <%= ":" %>
+		            	<%= user.select :user_type, ['Admin', 'Land lord', 'Tenant'], class: "form-control" %> 
+		            </div>
+		        </div>
+		        <div class="form-group">
+		        	<p> <input type="checkbox" required> Agree to terms and conditions </p>
+		        </div>
+		    </div>
+		    <div class="col-sm-4">
+		    </div>
+		    <div class="form-group">
+		    	<div class="col-sm-offset-5 col-sm-1">
+		    		<%= user.submit "Sign up", class: "btn btn-success"%>
+		   		</div>
+		    </div>
+		<% end %>
+	</div>
+</div>
