--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,3 @@
-<h1> Edit User details </h1>
+<h1 class="center"> Edit User details </h1>
 <%= render 'form' %>
 <%= link_to "Delete this article", user_path(@user), method: :delete, data: {confirm:"Are you sure you want delete your account?"} %>
