Updated style for msgs, errors, Friendly U

--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'errors' %>
+<%= render 'shared/errors', obj: @house %>
 <div class="row">
 	<div class="col-xs-12">
 		<%= form_for @house do |house| %>
