--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,11 @@ $navbar-default-bg: cyan;
 	background-image: asset-url("background6.jpg");
 }
 
+body{
+    padding-top: 70px;
+	padding-bottom: 70px;
+}
+
 #logo{
 	font: left;
 	font-size: 1.7em;
@@ -66,4 +71,14 @@ footer ul{
 footer ul li{
 	float: left;
     margin-left: 15px;
+}
+
+.actions{
+	border-top: 1px solid black;
+	margin-top: 10px;
+	padding-top:  15px;
+}
+
+.description{
+	margin-top: 0;
 }
