--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,7 +1,10 @@
- <h1>
-    <% flash.each do |name,msg| %>
-    <ul>
-      <li><%= msg %></li>
-    </ul>
-    <% end %>
-</h1>
+<div class="row">
+	<div class="col-xs-6 col-xs-offset-3">
+		<% flash.each do |name,msg| %>
+		<div class='alert alert-<%="#{name}" %>'>
+			<a href="#", class="close", data-dismiss="alert">&#215;</a>
+			<%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+		</div>
+		<% end %>
+	</div>
+</div>
