--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -25,6 +25,15 @@
           </ul>
         </li>
         <li><%= link_to "want to list a House?", new_house_path, id:"form_font" %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle"  id="form_font" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Customers 
+            <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Owners", users_path, id:"form_font" %></li>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to "Tenants", users_path, id:"form_font" %></li>
+          </ul>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "History", user_path([:id]), id:"form_font" %></li>
