--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'errors' %>
+<%= render 'shared/errors', obj: @user %>
 <div class="row">
 	<div class="col-xs-12">
 		<%= form_for @user do |user| %>
