--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -1,3 +1,4 @@
+<% if logged_in? && (current_user.user_type == 'Land lord' || current_user.user_type == 'Admin') %>
 <%= render 'shared/errors', obj: @house %>
 <div class="row">
 	<div class="col-xs-12">
@@ -18,17 +19,13 @@
 		        </div>
 		        <div class="form-group">
 		            <div class="control-label">
-		            	<%= house.label :furniture %> <%= ":" %> <%= house.select :furniture, ['Fully-furnished', 'Semi-furnished', 'Not-furnished'], class: "form-control" %>
+		            	<%= house.label :furniture %> <%= ":" %> <%= house.select :furniture, ['Fully-furnished', 'Semi-furnished', 'Not-furnished'],
+		            					class: "form-control" %>
 		            </div>
 		        </div>
 		        <div class="form-group">
 		            <div class="control-label">
 		            	<%= house.label :bhk %> <%= ":" %> <%= house.select :bhk, ['1BHK', '2BHK', '3BHK', '4BHK'], class: "form-control" %>
-		            </div>
-		        </div>
-		        <div class="form-group">
-		            <div class="control-label">
-		            	 <%= house.label "Owner" %> <%= ":" %> <%= house.collection_select :user_id, User.order(:name),:id,:name, include_blank: true, class: "form-control" %>
 		            </div>
 		        </div>
 		         <div class="form-group">
@@ -54,3 +51,8 @@
 		<% end %>
 	</div>
 </div>
+<% elsif logged_in? %>
+<h1>
+	 You aren't eligble to list house, <%= link_to "Sign up", signup_path %> as Land lord, Thank you...
+</h1>
+<% end %>
