--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,43 +14,73 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+        
         <li><%= link_to "About us", about_path, id: "form_font" %></li>
+        
         <li><%= link_to "Listed Houses", houses_path, id: "form_font" %></li>
+        
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle"  id="form_font" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">want a House? <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle"  id="form_font" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">want a House?
+            <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Rent a house", houses_path, id:"form_font" %></li>
             <li role="separator" class="divider"></li>
             <li><%= link_to "Buy a house", houses_path, id:"form_font" %></li>
           </ul>
         </li>
-        <li><%= link_to "want to list a House?", new_house_path, id:"form_font" %></li>
+        
+        <% if !logged_in? %>
+          <li><%= link_to "want to list a House?", new_house_path, id:"form_font" %></li>
+        <% elsif logged_in? && (current_user.user_type == 'Admin' || current_user.user_type == 'Land lord') %>
+          <li><%= link_to "want to list a House?", new_house_path, id:"form_font" %></li>
+        <% end %>
+
+        <% if logged_in? && current_user.user_type == 'Admin' %>
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle"  id="form_font" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Customers 
+          <span class="glyphicon glyphicon-user"></span> 
             <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Owners", users_path, id:"form_font" %></li>
+            <li><%= link_to "  Owners", users_path, id:"form_font", class: "glyphicon glyphicon-user" %></li>
             <li role="separator" class="divider"></li>
-            <li><%= link_to "Tenants", users_path, id:"form_font" %></li>
+            <li><%= link_to "  Tenants", users_path, id:"form_font", class: "glyphicon glyphicon-user" %></li>
           </ul>
         </li>
+
+        <% end %>
+
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "History", user_path([:id]), id:"form_font" %></li>
-        <li><a id="form_font" href="#">Sign in/ Sign up </a></li>
+       
+        <% if logged_in? %>
+        
+        <li><%= link_to "History", user_path(current_user), id:"form_font" %></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" id="form_font" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Hello <div class="glyphicon glyphicon-user"></div><span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" id="form_font" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Hello 
+            <span class="glyphicon glyphicon-user"></span><span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Profile", user_path([:id]), id:"form_font" %></a></li>
+            <li><%= link_to "  Profile", user_path(current_user), id:"form_font", class: "glyphicon glyphicon-user" %>
             <li role="separator" class="divider"></li>
-            <li id="form_font"><a href="#">Sign Out</a></li>
+             <li><%= link_to "  Update profile", edit_user_path(current_user), id:"form_font", class: "glyphicon glyphicon-pencil" %></a></li>
+            <li role="separator" class="divider"></li>
+            <li id="form_font"><%= link_to '  Log out', logout_path, method: :delete, class: "glyphicon glyphicon-off" %></li>
           </ul>
         </li>
+        
+        <% else %>
+        
+        <li style="padding: 0px 10px 0px 0px; color: black"><%= button_to "Sign up", signup_path, class: 'btn btn-success navbar-btn', method: :get %></li>
+        <li style="padding: 0px 10px 0px 0px"><%= button_to "Log In", login_path, class: 'btn btn-primary navbar-btn', method: :get %></li>      
+
+        <% end %>
       </ul>
       <form class="navbar-form navbar-right">
         <div class="form-group">
           <input type="text" class="form-control" style="width: 300px" placeholder="Enter house name, or BHK or location">
-        </div>        <button type="submit" class="btn btn-default" style="letter-spacing: -1px;color: #000000">Search</button>
+        </div>      
+        <button type="submit" class="btn btn-default" style="letter-spacing: -1px;color: #000000"><span class="glyphicon glyphicon-search">  
+        </span>  Search</button>
       </form>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
